<resources>
    <string name="app_name">PetPing</string>
    <string name="petName">Name</string>
    <string name="petBreed">Breed</string>
    <string name="petSex">Sex</string>
    <string name="btnAddPet">Add Pet</string>
    <string name="petWeight">Weight</string>
    <string name="petChar">Characteristics</string>
    <string name="petStory">Story</string>
    <string name="petHealth">Health</string>
    <string name="petDOB">DOB</string>
    <string-array name="breed_array">
        <item>ไม่ระบุ</item>
        <item>พุดเดิ้ลผสม</item>
        <item>ไทยผสม</item>
        <item>ไทย</item>
    </string-array>
    <string-array name="color_array">
        <item>ไม่ระบุ</item>
        <item>น้ำตาล</item>
        <item>เทา</item>
        <item>ดำ</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>