<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/petName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/petName" />

        <EditText
            android:id="@+id/petBreed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/petBreed"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="56dp" />

        <EditText
            android:id="@+id/petSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/petSex" />

        <EditText
            android:id="@+id/petWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/petWeight" />

        <EditText
            android:id="@+id/petChar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/petChar" />

        <EditText
            android:id="@+id/petStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/petStory" />

        <EditText
            android:id="@+id/petHealth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/petHealth" />

        <EditText
            android:id="@+id/petDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/petDOB" />

        <Button
            android:id="@+id/btnAddPet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAddPet" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>